# simple-snowplow

./: .dockerignore  .gitignore  .gitmodules  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  Dockerfile  LICENSE  README.md  THIRD_PARTY_NOTICES.md  compose.yml  docker-compose-dev.yml  docker-compose.yml  pyproject.toml
.github/workflows/: main.yml
clickhouse/: Dockerfile
deploy/clickhouse/config.d/: cors.xml
deploy/clickhouse/users.d/: cors.xml  default-user.xml
docs/: database.md
evnt/: __init__.py  cli.py  main.py
evnt/core/: __init__.py  config.py  constants.py  dependencies.py  exceptions.py  healthcheck.py  lifespan.py  protocols.py
evnt/ingest/: __init__.py  rabbitmq.py
evnt/middleware/: __init__.py  base.py  security.py
evnt/plugins/: elastic_apm.py  logger.py
evnt/routers/: __init__.py
evnt/routers/demo/static/: index.html
evnt/routers/demo/static/js/: snowplow-init.js
evnt/routers/demo/web/: env.d.ts  index.html  package.json  pnpm-lock.yaml  tsconfig.app.json  tsconfig.node.json  vite.config.ts
evnt/routers/demo/web/src/: App.vue  main.ts  router.ts
evnt/routers/demo/web/src/components/: AppNav.vue  ConnectionForm.vue  EventLogEntry.vue  EventsTable.vue  JsonTree.vue  TableSelector.vue
evnt/routers/demo/web/src/lib/: clickhouse.ts  interceptor.ts  snowplow.ts
evnt/routers/demo/web/src/stores/: liveEvents.ts  settings.ts
evnt/routers/demo/web/src/styles/: global.css
evnt/routers/demo/web/src/views/: LiveEventsView.vue  SettingsView.vue  TablesView.vue
evnt/routers/proxy/: __init__.py
evnt/routers/tracker/: __init__.py
evnt/routers/tracker/db/: __init__.py
evnt/routers/tracker/db/clickhouse/: __init__.py  connector.py  table_manager.py
evnt/routers/tracker/db/clickhouse/schemas/: __init__.py  snowplow.py
evnt/routers/tracker/models/: base.py  sendgrid.py
evnt/routers/tracker/parsers/: ip.py  useragent.py  utils.py
evnt/routers/tracker/routes/: __init__.py
simple_snowplow/: Dockerfile  __init__.py  cli.py  config.py  main.py  requirements.txt  settings.toml
simple_snowplow/core/: __init__.py  config.py  constants.py  dependencies.py  exceptions.py  healthcheck.py  lifespan.py  protocols.py  tracing.py
simple_snowplow/ingest/: rabbitmq.py
simple_snowplow/middleware/: __init__.py  base.py  logging.py  rate_limit.py  security.py
simple_snowplow/plugins/: elastic_apm.py  logger.py  models.py  sentry.py
simple_snowplow/routers/: __init__.py  base.py
simple_snowplow/routers/demo/: __init__.py
simple_snowplow/routers/demo/static/: index.html
simple_snowplow/routers/demo/static/css/: json-viewer.css  styles.css
simple_snowplow/routers/demo/static/js/: json-viewer.js  logger.js  snowplow-init.js
simple_snowplow/routers/proxy/: __init__.py  models.py
simple_snowplow/routers/tracker/: __init__.py  handlers.py  models.py  snowplow.py  useragent.py
simple_snowplow/routers/tracker/db/: __init__.py
simple_snowplow/routers/tracker/db/clickhouse/: __init__.py  connector.py  convert.py  lib.py  setup.py  table_manager.py
simple_snowplow/routers/tracker/db/clickhouse/schemas/: __init__.py  enums.py  snowplow.py
simple_snowplow/routers/tracker/models/: __init__.py  base.py  snowplow.py
simple_snowplow/routers/tracker/parsers/: __init__.py  iglu.py  ip.py  payload.py  useragent.py  utils.py
simple_snowplow/routers/tracker/routes/: __init__.py  sendgrid.py  snowplow.py
simple_snowplow/routers/tracker/schemas/: __init__.py  models.py
simple_snowplow/utils/: download_scripts.sh
tests/: conftest.py  test_cli_queue_healthcheck.py  test_cors.py  test_proxy.py
tests/core/: test_healthcheck.py  test_lifespan.py
tests/ingest/: test_rabbitmq.py  test_rabbitmq_worker_run.py
tests/routers/tracker/: test_handlers.py
tests/routers/tracker/db/clickhouse/: test_connector.py
tests/routers/tracker/parsers/: test_iglu.py  test_ip.py  test_payload.py  test_useragent.py  test_utils.py
utils/: download_scripts.sh
