[project]
name = "simple-snowplow"
version = "0.4.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13.2"
dependencies = [
    "aiofiles>=24.1.0",
    "aiohttp>=3.11.18",
    "brotli>=1.1.0",
    "brotli-asgi>=1.4.0",
    "certifi>=2025.4.26",
    "clickhouse-connect>=0.8.17",
    "crawlerdetect>=0.3.0",
    "dynaconf>=3.2.10",
    "elastic-apm>=6.23.0",
    "fastapi>=0.115.12",
    "fastapi-structlog>=0.5.0",
    "inflection>=0.5.1",
    "json-repair>=0.44.0",
    "orjson>=3.10.16",
    "prometheus-fastapi-instrumentator>=7.1.0",
    "pydantic-settings>=2.9.1",
    "pyyaml>=6.0.2",
    "requests>=2.32.3",
    "sentry-sdk[fastapi]>=2.35.1",
    "sqlalchemy>=2.0.40",
    "structlog>=25.3.0",
    "ua-parser[regex]>=1.0.1",
    "urllib3>=2.4.0",
    "uvicorn>=0.34.2",
]


[tool.ruff]
# Same as Black.
line-length = 88
target-version = "py313"

[tool.ruff.lint]
# Enable flake8-bugbear (`B`) rules.
select = ["E", "F", "I", "W", "B", "C4", "UP", "N", "C90", "PL"]
ignore = [
    # Allow non-abstract empty methods in abstract base classes
    "B027",
    # Allow boolean positional values in function calls, like `dict.get(... True)`
    "FBT003",
    # Ignore complexity
    "C901",
    # Ignore line length (handled by formatter)
    "E501",
    # whitespace before ':' - formatter handles this
    "E203",
]

# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.lint.mccabe]
# Unlike Flake8, default to a complexity level of 10.
max-complexity = 10

[tool.ruff.lint.isort]
known-first-party = ["simple_snowplow"]
combine-as-imports = true

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"
# Like Black, indent with spaces, rather than tabs.
indent-style = "space"
# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false
# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"

[dependency-groups]
dev = [
    "pre-commit>=4.2.0",
    "pytest>=8.3.5",
]
