[project]
name = "simple-snowplow"
version = "0.6.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "aio-pika>=9.5.7",
    "brotli-asgi>=1.4.0",
    "clickhouse-connect>=0.8.17",
    "crawlerdetect>=0.3.0",
    "fastapi>=0.127.1",
    "fastapi-structlog>=0.7.1",
    "fire>=0.7.0",
    "httpx>=0.28.1",
    "jsonschema>=4.25.1",
    "json-repair>=0.44.0",
    "orjson>=3.10.16",
    "prometheus-fastapi-instrumentator>=7.1.0",
    "pydantic-settings>=2.9.1",
    "structlog>=25.3.0",
    "ua-parser[regex]>=1.0.1",
    "uvicorn>=0.34.2",
]

[project.optional-dependencies]
# Install with `uv sync --extra apm` or `pip install simple-snowplow[apm]`.
# Required when SNOWPLOW_ELASTIC_APM__ENABLED=true; without the extra, the
# `core.tracing` module falls back to no-op decorators.
apm = ["elastic-apm>=6.23.0"]
# Install with `uv sync --extra sentry`. Required when
# SNOWPLOW_SENTRY__ENABLED=true; without it, enabling Sentry at startup
# fails with a clear error.
sentry = ["sentry-sdk[fastapi]>=2.35.1"]


[tool.ruff]
# Same as Black.
line-length = 88
target-version = "py314"

[tool.ruff.lint]
# Enable flake8-bugbear (`B`) rules.
select = ["E", "F", "I", "W", "B", "C4", "UP", "N", "C90", "PL"]
ignore = [
    # Allow non-abstract empty methods in abstract base classes
    "B027",
    # Allow boolean positional values in function calls, like `dict.get(... True)`
    "FBT003",
    # Ignore complexity
    "C901",
    # Ignore line length (handled by formatter)
    "E501",
    # whitespace before ':' - formatter handles this
    "E203",
]
# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]
# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.lint.per-file-ignores]
# Optional integrations (APM / Prometheus / Sentry) are imported lazily
# so the app can boot without those packages installed.
"simple_snowplow/main.py" = ["PLC0415"]
# Schema registry lookup is imported inside `insert_batch` to avoid a
# circular import with the schemas module that itself imports the connector.
"simple_snowplow/routers/tracker/db/clickhouse/connector.py" = ["PLC0415"]
# FastAPI endpoints idiomatically use `Depends(...)` in parameter defaults.
"simple_snowplow/routers/tracker/routes/*.py" = ["B008"]
# RabbitMQPublisher.__init__ takes six plain fields; splitting into a DTO
# hurts more than the 5-arg limit helps.
"simple_snowplow/ingest/rabbitmq.py" = ["PLR0913"]
# Tests embed long Iglu URIs in fixtures and use long descriptive names;
# magic values in assertions are fine.
"tests/**/*.py" = ["E501", "PLR2004"]

[tool.ruff.lint.mccabe]
# Unlike Flake8, default to a complexity level of 10.
max-complexity = 10

[tool.ruff.lint.isort]
known-first-party = ["simple_snowplow"]
combine-as-imports = true

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"
# Like Black, indent with spaces, rather than tabs.
indent-style = "space"
# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false
# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"

[tool.pytest.ini_options]
filterwarnings = [
    # clickhouse_connect's Cython buffer module (driverc/buffer.pyx) uses
    # `array.array('u', ...)`, deprecated in Python 3.12+ and due for removal
    # in 3.16. Emitted during module import via frozen importlib, so we cannot
    # pin the filter to the module name. Third-party issue, not ours.
    "ignore:The 'u' type code is deprecated:DeprecationWarning",
]

[tool.ty.environment]
# Support both import styles used in this repo:
# - absolute package imports: from simple_snowplow...
# - app-root imports (when running from ./simple_snowplow): from core..., from routers...
root = [".", "./simple_snowplow"]

[dependency-groups]
dev = [
    "pre-commit>=4.2.0",
    "pytest>=8.3.5",
]
